# yt-buddy

./: .gitignore  Cargo.toml
frontend/: Cargo.toml
frontend/src/: lib.rs  main.rs
frontend/src/components/: footer.rs  ingest.rs  inputs.rs  page_title.rs  search.rs  sidenav.rs
linkforge_core/: Cargo.toml
linkforge_core/src/: lib.rs  loaders.rs  schema.rs
linkforge_core/src/loaders/: document_loader.rs  text_file_loader.rs  youtube_captions_loader.rs
scripts/: start_qdrant.sh  surreal_local_start.sh
sm_llm_loaders/: Cargo.toml
sm_llm_loaders/src/: lib.rs  pdf_loader.rs  text_file_loader.rs  traits.rs  youtube_captions_loader.rs
yt_buddy/: Cargo.toml
yt_buddy/public/: ingest.html  search.html
yt_buddy/src/: ctx.rs  error.rs  ingesters.rs  log.rs  main.rs  model.rs  traits.rs
yt_buddy/src/web/: mod.rs  mw_auth.rs  routes_ingest_entries.rs  routes_login.rs
yt_buddy/tests/: quick_dev.rs
yt_buddy_core/: Cargo.toml
yt_buddy_core/examples/: pdf_loader_01.rs
yt_buddy_core/src/: embeddings.rs  lib.rs  loaders.rs  retrievers.rs  schema.rs  text_splitter.rs
yt_buddy_core/src/loaders/: document_loader.rs  pdf_loader.rs  text_file_loader.rs  youtube_captions_loader.rs
yt_buddy_core/src/retrievers/: retriever.rs  vector_store_retriever.rs
yt_kb/: Cargo.toml
yt_kb/src/: ingesters.rs  lib.rs
yt_kb_core/: Cargo.toml
yt_kb_core/src/: embeddings.rs  lib.rs
yt_kb_core/src/loaders/: document_loader.rs  text_file_loader.rs  youtube_captions_loader.rs
