[workspace]
members = ["yt_buddy_core", "yt_buddy", "sm_llm_loaders", "frontend"]

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"

llm-chain = "0.9.0"
llm-chain-qdrant = "0.9.0"
qdrant-client = "1.1.1"

serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
