[package]
name = "yt_buddy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
serde = "1.0.160"
serde_json = "1.0.96"
surrealdb = "1.0.0-beta.9"
uuid = "1.3.1"

tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
llm-chain = { workspace = true }
qdrant-client = { workspace = true }

yt_buddy_core = { path = "../yt_buddy_core" }
