[package]
name = "yt_buddy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
llm-chain = { workspace = true }
llm-chain-qdrant = { workspace = true }
qdrant-client = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

yt_buddy_core = { path = "../yt_buddy_core" }
sm_llm_loaders = { path = "../sm_llm_loaders" }
salvo = { git = "https://github.com/salvo-rs/salvo.git", features = [
  "serve-static",
  "compression",
] }
axum = { version = "0.6", features = ["macros"] }
httpc-test = "0.1.2"
tower-http = { version = "0.4.0", features = ["fs"] }
tower-cookies = "0.9.0"
lazy-regex = "2.5.0"
