[package]
name = "yt_buddy_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roxmltree = "0.18.0"
reqwest = "0.11.16"
html-escape = "0.2.13"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
rust-bert = { git = "https://github.com/guillaume-be/rust-bert.git", branch = "master" }
tch = "0.11.0"

tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

llm-chain = { workspace = true }
qdrant-client = { workspace = true }
iter_tools = "0.1.4"
