[package]
name = "yt_kb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
serde = "1.0.160"
serde_json = "1.0.96"
surrealdb = "1.0.0-beta.9"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
uuid = "1.3.1"

yt_kb_core = { path = "../yt_kb_core" }
