[package]
name = "yt_kb_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roxmltree = "0.18.0"
llm-chain = "0.7"
anyhow = "1.0"
thiserror = "1.0"
reqwest = "0.11.16"
html-escape = "0.2.13"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.68"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
