[package]
name = "yt_kb_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roxmltree = "0.18.0"
llm-chain = "0.7"
reqwest = "0.11.16"
html-escape = "0.2.13"
async-trait = "0.1.68"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
